--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: "M PLUS Code Latin", system-ui;
+    font-family: "ABeeZee", system-ui;
     text-decoration: none;
 }
 
@@ -137,6 +137,7 @@ button:hover {
     text-orientation: upright;
     font-size: 2rem;
     font-weight: bold;
+    font-family: "M Plus Code Latin"
 }
 
 .carrossel-sub {
