--- a/doug/playervideo/style.css
+++ b/doug/playervideo/style.css
@@ -26,7 +26,7 @@ body {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     max-width: 1400px;
-    margin: 0 auto 50px;
+    margin: 0 auto;
 }
 
 .grid-header {
@@ -296,7 +296,6 @@ body {
     height: 54px;
     font-size: 20px;
     font-weight: bold;
-    background-color: rgba(0, 0, 0, 0.555);
     color: white;
 }
 
@@ -307,7 +306,6 @@ body {
     gap: 6px;
     width: 290px;
     height: 68px;
-    background-color: rgba(0, 0, 0, 0.555);
 }
 
 .foot-comment input {
@@ -333,13 +331,12 @@ body {
 /*----------------------- Cabeçalho (Footer) -----------------------*/
 
 footer {
-    position: relative;
+    margin-top: auto;
     width: 100%;
     bottom: 0;
 }
 
 .links {
-    background-color: rgba(0, 0, 0, 0.50);
     display: flex;
     justify-content: center;
     gap: 220px;
@@ -353,7 +350,6 @@ footer {
 .autores {
     color: white;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.50);
     padding: 25px 0;
     font-size: 12px;
 }
