--- a/doug/style.css
+++ b/doug/style.css
@@ -641,6 +641,7 @@ hr {
     border: 2px solid #8DB1AB;
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
 }
 
 .painel_about h2 {
@@ -648,9 +649,14 @@ hr {
     color: #8DB1AB;
 }
 
+.title {
+    margin-bottom: 50px;
+}
+
 .about_content {
     width: 656px;
     height: 560px;
+    margin: 0 auto;
 }
 
 .about_top {
@@ -681,25 +687,25 @@ hr {
 /*-----Painel Feedback-----*/
 .painel_feedback {
     display: none;  /* <---------- aqui tem que alterar o display para flex*/
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 50px;
     width: 782px;
     height: 828px;
     border: 2px solid #8DB1AB;
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.5);
+    padding: 50px 0;
 }
 
 .painel_feedback h2 {
     font-size: 2rem;
     color: #8DB1AB;
+    text-align: center;
 }
 
 .feedback_content {
     width: 656px;
     height: 560px;
+    margin: 50px auto;
 }
 
 .feedback_top {
