--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ button:hover {
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    overflow: hidden;
 }
 
 .modal-content {
